# hurlbox

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: github-build-setup.yml  publish.yml  release.yml
apps/desktop/: Cargo.toml
apps/desktop/src/: main.rs
apps/desktop/src/engine/: hurl_parser.rs  hurl_runner.rs  hurl_serializer.rs  mod.rs  model.rs
apps/desktop/src/ui/: hurl_preview.rs  mod.rs  request_builder.rs  response_viewer.rs  text_input.rs
apps/server/: Cargo.toml
apps/server/src/: api.rs  envfile.rs  execution.rs  filescanner.rs  main.rs  models.rs
crates/hurl_builder/: Cargo.toml
crates/hurl_builder/src/: lib.rs
examples/: docker-compose.yml  posts.hurl  todos.hurl  users.hurl
examples/hurlbox/: hurlbox.hurl
web/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: App.css  App.tsx  index.css
web/src/components/: FileExplorer.tsx  ResponseViewer.tsx
web/src/lib/: hurl-lang.ts
