[workspace]
members = [
    "apps/desktop",
    "apps/server",
    "crates/hurl_builder",
]
resolver = "2"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (shipped with spaceman)
cargo-dist-version = "0.25.1"
# The preferred tag to use when installing the CLI (shipped with spaceman)
install-updater = false
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "aarch64-unknown-linux-gnu",
    "x86_64-unknown-linux-gnu",
    "aarch64-pc-windows-msvc",
    "x86_64-pc-windows-msvc",
]
# Which apps to dist
# apps = ["hurlbox-server"]
# Path that installers should place binaries in
install-path = "$HOME/.hurlbox/bin"
# Whether to auto-include files like README, LICENSE
auto-includes = true