[workspace]
members = [
    "apps/desktop",
    "apps/server",
    "crates/hurl_builder",
]
resolver = "2"

# cargo-dist options
[workspace.metadata.dist]
cargo-dist-version = "0.31.0"
install-updater = false
ci = "github"
installers = ["shell"]
targets = ["aarch64-apple-darwin", "aarch64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu"]
apps = ["hurlbox"]
auto-includes = false
github-build-setup = "../github-build-setup.yml"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.dist]
inherits = "release"
