[package]
name = "hurlbox-desktop"
version = "0.1.0"
edition = "2024"

[dependencies]
hurl_builder = { path = "../../crates/hurl_builder" }
gpui = { version = "0.2.2", default-features = false, features = ["font-kit"] }
hurl = "=7.0.0"
hurl_core = "=7.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unicode-segmentation = "1"