[package]
name = "hurlbox-server"
version = "0.1.0"
edition = "2024"

[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hurl = "=7.0.0"
hurl_core = "=7.0.0"
hurl_builder = { path = "../../crates/hurl_builder" }
rust-embed = "8"
mime_guess = "2"
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
ignore = "0.4"
