[package]
name = "hurlbox"
version = "0.1.0"
edition = "2024"
description = "A web-based IDE and server for Hurl HTTP test files"
readme = "../../README.md"
license = "MIT"

[[bin]]
name = "hurlbox"
path = "src/main.rs"

[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hurl = "=7.0.0"
hurl_core = "=7.0.0"
hurl_builder = { path = "../../crates/hurl_builder" }
rust-embed = "8"
mime_guess = "2"
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
ignore = "0.4"
